<resources>
    <string name="app_name">StockApp</string>
    <string name="marketplace">Marketplace Demo</string>
    <string name="manager">Manager Demo</string>
    <string name="customers">Customers</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="no_invoices">There are no orders created yet</string>
    <string name="no_customers">There are no customers created yet</string>
    <string name="no_stock">There are no products created yet</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="customer_address">Customer Address</string>
    <string name="update_customer">Update Customer</string>
    <string name="update_product">Update Product</string>
    <string name="product">Product</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_image">Product Image</string>
    <string name="create_customer">Create New Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="create_new_product">Create New Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="phone_number">Phone number</string>
    <string name="there_are_no_products_yet">There are no products yet.</string>
</resources>